# mac-appify

./: .travis.yml  README.md  package.json  setup.cfg  setup.py
scripts/: appify
tests/mac-appify/examples/: appify.sh  script.sh
